Fri Oct 23 13:51:33 2015  yui-knk  <spiketeika@gmail.com>

	* test_call.rb (test_safe_call): Add test cases for safe
	  navigation operator assignment.  [Fix GH-1064]
	  Validate:
	  * can assign an attribute which is `nil`
	  * can "or assign" an attribute which is `nil`

Fri Oct 23 11:58:21 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_peephole_optimize): optimize lengthy safe
	  navigation method chain.  [Feature #11537]

Fri Oct 23 10:58:41 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/matrix/eigenvalue_decomposition.rb (tridiagonalize): fix
	  indentation to avoid a warning when the command line option -w of
	  ruby is specified.

	* lib/matrix/eigenvalue_decomposition.rb (hessenberg_to_real_schur):
	  change the name of a block parameter to avoid a warning when the
	  command line option -w of ruby is specified.

Fri Oct 23 10:49:36 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_compile_each): support safe navigation of simple
	  attribute assignment.  [Feature #11537]

	* parse.y (mlhs_node, lhs, attrset_gen): ditto.  keep mid
	  non-attrset as the sign of safe navigation.

Fri Oct 23 07:17:11 2015  Eric Wong  <e@80x24.org>

	* test/io/wait/test_io_wait.rb (test_wait_eof): test return value

Fri Oct 23 00:32:02 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/openssl/ossl_ssl.c (ssl_npn_select_cb): explicitly raise error
	  in ext/openssl instead of OpenSSL itself because LibreSSL
	  silently truncate the selected protocol name by casting the length
	  from int to unsigned char. [Bug #11369]
	  Patch by Jeremy Evans <merch-redmine@jeremyevans.net>

Fri Oct 23 00:49:45 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/un.rb (help): change the name of a block parameter to avoid
	  a warning when the command line option -w of ruby is specified.

Fri Oct 23 00:22:20 2015  Josef Simanek  <josef.simanek@gmail.com>

	* string.c (rb_str_tr): [DOC] Escape backslash in String#tr
	  documentation.  [Fix GH-1063]
